# pico-project-template

./: .gitignore  CMakeLists.txt  README.md
boards/: empworks_arcadia.h
src/: blink.c
